# raycasting

./: CMakeLists.txt  README.md
src/: camera.c  camera.h  color.h  main.c  main.h  render.c  render.h  window.c  window.h
src/util/: main.h  types.h  util.h
